fixed user rights issue

--- a/src/app/Pages/trainingdetail/trainingdetail.component.html
+++ b/src/app/Pages/trainingdetail/trainingdetail.component.html
@@ -309,6 +309,7 @@
             </div>
           </div>
         </div>
+        @if (financeEnabled()) {
         <h6 class="text-primary"><u>Finance Section:</u></h6>
         <div class="text-primary fw-medium fs-7">
           <div class="mb-3 row border">
@@ -443,6 +444,7 @@
             </div>
           </div>
         </div>
+        }
         <h6 class="text-primary"><u>Job Section:</u></h6>
         <div class="text-primary fw-medium fs-7">
           <div class="mb-3 row border">
