--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -196,6 +196,7 @@
         </div>
       </div>
     </div>
+    @if (financeEnabled()) {
     <h6 class="text-primary"><u>Finance Section:</u></h6>
     <div class="text-primary fw-medium fs-7">
       <div class="mb-3 row border">
@@ -330,6 +331,7 @@
         </div>
       </div>
     </div>
+    }
     <h6 class="text-primary"><u>Job Section:</u></h6>
     <div class="text-primary fw-medium fs-7">
       <div class="mb-3 row border">
